card editor: move padding inside textviews to avoid ugly clipping

--- a/data/style.css
+++ b/data/style.css
@@ -14,14 +14,9 @@
   color: inherit;
 }
 
-.scrolled-window undershoot.top {
-  box-shadow: inset 0 1px alpha(@shade_color, .75);
-  background: linear-gradient(to bottom, alpha(@shade_color, .75), transparent 4px);
-}
-
-.scrolled-window undershoot.bottom {
-  box-shadow: inset 0 -1px alpha(@shade_color, .75);
-  background: linear-gradient(to top, alpha(@shade_color, .75), transparent 4px);
+.scrolled-window undershoot {
+  background: none;
+  box-shadow: none;
 }
 
 .card-text {
